# SH-assembly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  DNA_string.cpp  DNA_string.h  Hash.h  Params.h  Utility.cpp  Utility.h  global.cpp  global.h  multithread_io.cpp  multithread_io.h  unitig_graph.cpp  unitig_graph.h  unordered_map_mt.h  vector_mt.h
core/: CMakeLists.txt  unitig_graph.cpp  unitig_graph.h
cqf/: CMakeLists.txt  CQF_mt.h  chunk.h  cqf_deNoise.h  gqf.c  gqf.h  reader.h  true2falseKmer_DP.cpp  true2falseKmer_DP.h
src/: CMakeLists.txt  CQF-deNoise.cpp  compare_contigs.cpp  contig_assembly.cpp
